test/semantic_errors/invalid_binaryop6.mc
void main() {
    bool res;
    char a;
    bool b;
    res = a < b;
}